--- a/www/public/500.html
+++ b/www/public/500.html
@@ -12,7 +12,7 @@
 <h2>Internal Server Error</h2><p>Wooops, something went wrong</p>
 </div>
 <div id="footer">
-Powered by <a href="http://perldancer.org/">Dancer</a>.
+Powered by <a href="http://perldancer.org/">Dancer2</a>.
 </div>
 </body>
 </html>
