--- a/www/public/404.html
+++ b/www/public/404.html
@@ -12,7 +12,7 @@
 <h2>Page Not Found</h2><p>Sorry, this is the void.</p>
 </div>
 <div id="footer">
-Powered by <a href="http://perldancer.org/">Dancer</a>.
+Powered by <a href="http://perldancer.org/">Dancer2</a>.
 </div>
 </body>
 </html>
